package Prenda;

public class Color {
    Integer rojo;
    Integer verde;
    Integer azul;

    public Color(int rojo, int verde, int azul){
        this.rojo = rojo;
        this.verde = verde;
        this.azul = azul;
    }
}
