package Prenda;

public enum EstadoClima {
    FRIO,
    CALOR,
    CUALQUIERCLIMA
}
