package Prenda;

public enum Material {
    CUERO,
    LANA,
    ALGODON,
    TELA
}