package Service.Clima;

public interface ProveedorClima {
    Double getTemperatura();
}
