package Uniforme;

import Prenda.Prenda;

public interface Sastre {
    Prenda fabricarParteSuperior();
    Prenda fabricarParteInferior();
    Prenda fabricarCalzado();
}
