@startuml

enum Categroia{
    +PARTE_SUPERIOR
    +CALZADO
    +PARTE_INFERIOR
    +ACCESORIOS
}

class Prenda.Color {
    -rojo : Integer
    -verde : Integer
    -azul : Integer
}

enum Prenda.Material {
    +CUERO
    +LANA
    +ALGODON
    +TELA
}

class Prenda.Prenda {
    -tipoPrenda Prenda.TipoPrenda
    -colorPrimario : Prenda.Color
    -colorSecundario : Prenda.Color
    -material : Prenda.Material
    -trama : Prenda.Trama
    -estadoClima : Prenda.EstadoClima

    +getCategoria() : Prenda.Categoria
    +getEstadoClima() : Prenda.EstadoClima
}

class Prenda.PrendaBorrador {
    -tipoPrenda : Prenda.TipoPrenda
    -colorPrimario : Prenda.Color
    -colorSecundario : Prenda.Color
    -material : Prenda.Material
    -trama : Prenda.Trama
    -estadoClima : Prenda.EstadoClima

    +agregarColorPrimario(Prenda.Color colorPrimario) : void
    +agregarColorSecundario(Prenda.Color colorSecundario) : void
    +agregarMaterial(Prenda.Material material) : void
    +agregarTrama(Prenda.Trama trama) : void
    +crearPrenda() : Prenda.Prenda
    +agregarEstadoClima(Prenda.EstadoClima estadoClima) : void
}

interface Uniforme.Uniforme.Sastre {
    +fabricarParteSuperior() : Prenda.Prenda
    +fabricarParteInferior() : Prenda.Prenda
    +fabricarCalzado() : Prenda.Prenda
}

class Uniforme.Uniforme.SastreJohnston {
  +fabricarParteSuperior() : Prenda.Prenda
  +fabricarCalzado() : Prenda.Prenda
  +fabricarParteInferior() : Prenda.Prenda
}

class Uniforme.Uniforme.SastreSanJuan {
  +fabricarParteSuperior() : Prenda.Prenda
  +fabricarCalzado() : Prenda.Prenda
  +fabricarParteInferior() : Prenda.Prenda
}

class Prenda.TipoPrenda {
   -categoria : Prenda.Categoria
   -nombre : String

    +getCategoria() : Prenda.Categoria
    +getNombre() : String
}

enum Prenda.Trama {
    +LISA
    +RAYADA
    +CON_LUNARES
    +A_CUADROS
    +ESTAMPADO
}

class Uniforme.Uniforme {
    -prendaParteSuperior : Prenda.Prenda
    -prendaParteInferior : Prenda.Prenda
    -calzado : Prenda.Prenda

    +fabricar(Uniforme.Uniforme.Sastre sastre) : Uniforme.Uniforme
}

class Sugerencia {
    -atuendoSugerido : Set<Prenda.Prenda>
    -proveedorClima : ProveedorClima
    
    +generarSugerencias(Guardarropa.Guardarropa guardarropa) : Set<Prenda.Prenda>
    +prendaSugeridaAptaParaLaTemperatura(Set<Prenda.Prenda> prendas) : Prenda.Prenda
    +validadorGuardarropaParaHacerSugerencia(Guardarropa.Guardarropa guardarropa) : void
}

class Guardarropa.Guardarropa {
    -prendasGuardadas : Set<Prendas>
    
    +getPrendasGuardadas() : Set<Prenda.Prenda>
    +agregarPrenda(Prenda.Prenda prenda) : void
    +getPrendasParaLaCategoria(Prenda.Categoria categoria) : Set<Prenda.Prenda>
}

enum Prenda.EstadoClima{
    +FRIO
    +CALOR
    +CUALQUIERCLIMA
}

interface ProveedorClima {
    +getTemperatura() : Double
}

class AccuWeatherAPI {
    -ultimaFechaDePedido : LocalDateTime
    -temperaturaActual : Double
    
    +getWeather(String ciudad) : List<Map<String, Object>>
    +getTemperatura() : Double
    +devuelveTemperaturaActualEnCelsius(HashMap<String, Object> temperatura) : Double
    +estaEnFahrenheit(HashMap<String, Object>) : Boolean
    +convertirDeFahrenheitACelsius(Double valor) : Double
    +fueHaceMasDe12Horas(LocalDateTime ultimaFechaDePedido) : Boolean
}

Prenda.Prenda "*" --> "1" Prenda.TipoPrenda
Prenda.Prenda "*" --> "1" Prenda.Color
Prenda.Prenda "*" --> "1" Prenda.Color
Prenda.Prenda "*" --> "1" Prenda.Material
Prenda.Prenda "*" --> "1" Prenda.Trama
Prenda.Prenda "*" --> "1" Prenda.EstadoClima
Prenda.PrendaBorrador "*" --> "1" Prenda.TipoPrenda
Prenda.PrendaBorrador "*" --> "1" Prenda.Color
Prenda.PrendaBorrador "*" --> "1" Prenda.Color
Prenda.PrendaBorrador "*" --> "1" Prenda.Material
Prenda.PrendaBorrador "*" --> "1" Prenda.Trama
Prenda.PrendaBorrador "*" --> "1" Prenda.EstadoClima
Prenda.PrendaBorrador ..> Prenda.Prenda
Uniforme.Uniforme.Sastre -[hidden]--> Uniforme.Uniforme.SastreSanJuan
Uniforme.Uniforme.Sastre -[hidden]--> Uniforme.Uniforme.SastreJohnston
Uniforme.Uniforme.SastreSanJuan ..|> Uniforme.Uniforme.Sastre
SastreSastreJohnston ..|> Uniforme.Uniforme.Sastre
TipoDePrenda "*" --> "1" Prenda.Categoria
Uniforme.Uniforme "*" --> "1" Prenda.Prenda
Uniforme.Uniforme "*" --> "1" Prenda.Prenda
Uniforme.Uniforme "*" --> "1" Prenda.Prenda
Uniforme.Uniforme ..> Uniforme.Uniforme.Sastre
Sugerencia "*" --> "*" Prenda.Prenda
Sugerencia "*" --> "1" ProveedorClima
Guardarropa.Guardarropa "*" --> "*" Prenda.Prenda
AccuWeatherAPI ..|> ProveedorClima
ProveedorClima -[hidden]--> AccuWeatherAPI

@enduml
